--- a/scss/partials/_var.scss
+++ b/scss/partials/_var.scss
@@ -10,3 +10,4 @@ $rightBGcolor:hsl(183, 100%, 15%);
 $buttonBGcolor:hsl(183, 100%, 15%);
 $bgColorInput: hsl(189, 41%, 97%);
 $txtColorCustom:hsl(186, 14%, 43%);
+$seila: hsl(184, 14%, 56%);
